--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </head>
   <body>
     <div class="textColumn">
-      <h1>CI-CD Working Demo</h1>
+      <h1>CICD Working Demo Production</h1>
       <p>Your application is now running on your own dedicated environment in the AWS Cloud</p>
     </div>
     <div class="linksColumn">
