build and index file updates

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
   </head>
   <body>
     <div class="textColumn">
-      <h1>CICD Working Demo Production</h1>
+      <h1>CICD Working Demo Prod</h1>
       <p>Your application is now running on your own dedicated environment in the AWS Cloud</p>
     </div>
     <div class="linksColumn">
-      <h2>What's Next?</h2>
+      <h2>AWS CICD</h2>
       <ul>
         <li><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/create_deploy_nodejs_custom_container.html">Customizing and Configuring a Container </a></li>
       </ul>
