--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <p>Your application is now running on your own dedicated environment in the AWS Cloud</p>
     </div>
     <div class="linksColumn">
-      <h2>changes reflected</h2>
+      <h2>hello</h2>
       <ul>
         <li><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/create_deploy_nodejs_custom_container.html">Customizing and Configuring a Container </a></li>
       </ul>
